--- a/ios/LoveNotes/Info.plist
+++ b/ios/LoveNotes/Info.plist
@@ -73,6 +73,8 @@
 		<string>FontAwesome5_Brands.ttf</string>
 		<string>FontAwesome5_Regular.ttf</string>
 		<string>FontAwesome5_Solid.ttf</string>
+		<string>fiolex_girl.ttf</string>
+		<string>rix_love_fool.ttf</string>
 	</array>
 </dict>
 </plist>
