--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "native-base": "^2.9.2",
     "react": "16.6.1",
     "react-native": "0.57.7",
+    "react-native-easy-grid": "^0.2.0",
     "react-native-gesture-handler": "^1.0.12",
+    "react-native-image-picker": "^0.27.2",
     "react-native-vector-icons": "^6.1.0",
     "react-navigation": "^3.0.9"
   },
@@ -22,5 +24,10 @@
   },
   "jest": {
     "preset": "react-native"
+  },
+  "rnpm": {
+    "assets": [
+      "./assets/fonts/"
+    ]
   }
 }
